TASK RESPONSIBILITY REWORK (including responsible users for task occurrences)
some bugfixing on organizations

--- a/app/i18n/locales/de.json
+++ b/app/i18n/locales/de.json
@@ -43,6 +43,7 @@
   "organizations": {
     "actions": {
       "join": "Einer Initiative beitreten",
+      "resign": "Aus Initiative austreten",
       "list": "Alle Initiativen ansehen",
       "create": "Neue Initiative anlegen",
       "edit": "Initiative bearbeiten",
